pkl-core/src/test/files/LanguageSnippetTests/input/errors/wrongForGeneratorType1.pkl
res1 = new Listing {
  for (n: Int in List(1, "other", 2)) { n }
}